tests/baselines/reference/genericCloduleInModule2.errors.txt
==== tests/cases/compiler/genericCloduleInModule2.ts (1 errors) ====
    // BUG 756210
    module A {
        export class B<T> {
            foo() { }
            static bar() { }
        }
    }
    
    module A {
        export module B {
            export var x = 1;
        }
    }
    
    var b: A.B;
           ~~~
!!! error TS2173: Generic type references must include all type arguments.
    b.foo();